--- a/Conversion Calculator App/Base.lproj/Main.storyboard
+++ b/Conversion Calculator App/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter length in Yards" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="k72-GK-baJ" customClass="DecimalMinusTextField" customModule="Conversion_Calculator_App" customModuleProvider="target">
                                 <rect key="frame" x="47" y="166" width="173" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter length in Meters" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Ue2-kp-6WF" customClass="DecimalMinusTextField" customModule="Conversion_Calculator_App" customModuleProvider="target">
@@ -51,6 +51,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Yards" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4g2-A5-yxM">
                                 <rect key="frame" x="228" y="173" width="142" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" identifier="fromLabelMainScreen"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -58,6 +59,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Meters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KdW-FM-T4Z">
                                 <rect key="frame" x="228" y="297" width="142" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" identifier="toLabelMainScreen"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -79,14 +81,21 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ehz-NR-1Cz">
-                                <rect key="frame" x="301" y="351" width="39" height="30"/>
+                                <rect key="frame" x="302" y="351" width="52" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Mode"/>
+                                <connections>
+                                    <action selector="modeButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F1l-Nn-ZIo"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bqe-RM-KGH">
-                                <rect key="frame" x="179" y="814" width="57" height="30"/>
+                                <rect key="frame" x="179" y="814" width="57" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Settings"/>
+                                <connections>
+                                    <action selector="settingsButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DLk-Sz-8hG"/>
+                                    <segue destination="WQR-og-wWG" kind="presentation" identifier="segueToSettings" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="cTT-cg-VcN"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -97,8 +106,11 @@
                         </connections>
                     </view>
                     <connections>
+                        <outlet property="fromUnitLabel" destination="4g2-A5-yxM" id="GhI-Od-Y1w"/>
                         <outlet property="lengthBottomEnterValue" destination="Ue2-kp-6WF" id="LSa-09-feA"/>
                         <outlet property="lengthTopEnterValue" destination="k72-GK-baJ" id="FEB-Zg-3fd"/>
+                        <outlet property="titleLabel" destination="8VS-o6-2hj" id="qfD-ey-n8m"/>
+                        <outlet property="toUnitLabel" destination="KdW-FM-T4Z" id="uMy-6T-av1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -132,16 +144,62 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Yards" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="alJ-4t-2GB">
+                                <rect key="frame" x="262" y="98" width="132" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Meters" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F8K-XL-n2S">
+                                <rect key="frame" x="242" y="153" width="152" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LLO-fd-AFo">
+                                <rect key="frame" x="0.0" y="646" width="414" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="CmQ-8v-bHc"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="36e-1p-Zpi" appends="YES" id="XQh-KK-M03"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="KpQ-61-ko7">
-                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="i28-95-nDI"/>
-                        <barButtonItem key="rightBarButtonItem" title="Save" id="VXp-QN-qhu"/>
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="i28-95-nDI">
+                            <connections>
+                                <action selector="cancelButtonClicked:" destination="7gS-fF-uos" id="DEZ-l4-kvn"/>
+                                <segue destination="BYZ-38-t0r" kind="presentation" identifier="segueCancelBackToMain" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="uxX-zA-thz"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="VXp-QN-qhu">
+                            <connections>
+                                <action selector="saveButtonClicked:" destination="7gS-fF-uos" id="8wM-mC-OHh"/>
+                                <segue destination="BYZ-38-t0r" kind="presentation" identifier="segueSaveBackToMain" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="0fo-xc-fvc"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="fromUnitsValue" destination="alJ-4t-2GB" id="iXh-Sr-IxN"/>
+                        <outlet property="toUnitsValue" destination="F8K-XL-n2S" id="8kv-Vo-Awv"/>
+                        <outlet property="unitsPickerView" destination="LLO-fd-AFo" id="hqp-gE-7oA"/>
+                        <segue destination="osr-rV-HVf" kind="unwind" identifier="unwindToMain" unwindAction="unwindToMainWithSegue:" id="Z6E-Mf-vQa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lDt-Ey-HMD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="osr-rV-HVf" userLabel="Exit" sceneMemberID="exit"/>
+                <tapGestureRecognizer id="36e-1p-Zpi">
+                    <connections>
+                        <action selector="entireScreenTapRecognizer:" destination="7gS-fF-uos" id="W6w-is-2me"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1784.057971014493" y="101.78571428571428"/>
         </scene>
@@ -150,6 +208,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WQR-og-wWG" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="Q0h-dB-Nw1"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bXo-dQ-rDT">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -164,4 +223,7 @@
             <point key="canvasLocation" x="873.91304347826099" y="101.78571428571428"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="0fo-xc-fvc"/>
+    </inferredMetricsTieBreakers>
 </document>
